logstash-oss/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logstash
  labels:
    app: logstash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logstash
  template:
    metadata:
      labels:
        app: logstash
    spec:
      containers:
        - name: logstash
          image: opensearchproject/logstash-oss-with-opensearch-output-plugin:8.9.0
          ports:
            - containerPort: 5044
              name: beats
          volumeMounts:
            - name: config
              mountPath: /usr/share/logstash/config/logstash.yml
              subPath: logstash.yml
            - name: config
              mountPath: /usr/share/logstash/config/pipelines.yml
              subPath: pipelines.yml
            - name: config
              mountPath: /usr/share/logstash/pipeline/logstash.conf
              subPath: logstash.conf
            - name: logstash-certs
              mountPath: /usr/share/logstash/certs
              readOnly: true
      volumes:
        - name: config
          configMap:
            name: logstash-config
        - name: logstash-certs
          secret:
            secretName: logstash-tls
