logstash-oss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logstash
spec:
  selector:
    app: logstash
  ports:
    - name: beats
      port: 5044
      targetPort: 5044
      protocol: TCP
  type: ClusterIP
