logstash-oss/ingress-tcp.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: logstash-beats
  namespace: logstash
spec:
  entryPoints:
    - beats
  routes:
    - match: HostSNI(`logstash.internal.services.atlantishq.de`)
      services:
        - name: logstash
          port: 5044
  tls:
    passthrough: true
